create KafkaProducerConfig, KafkaProducerService
